<resources>
    <string name="app_name">My Habits</string>
    <string name="action_settings">Settings</string>

    <string name="menu_reload">Reload</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_table">Table</string>
    <string name="menu_weather">weather info</string>
    <string name="menu_place">place info</string>
    <string name="menu_map">Map</string>
    <string name="menu_log">Log</string>

    <string name="dialog_delete_title">Delete all entries</string>
    <string name="dialog_delete_msg">If you choose "YES" you cannot get all the previous log enries again. Are you sure?</string>

    <string name="toast_delete">All entry logs were erased</string>
    <string name="toast_reload_empty">There is no new data</string>
    <string name="toast_reload_data">New entries available !!!</string>

    <string name="wea_example">---</string>
    <string name="check_time_weather">Send weather info</string>

    <string name="title_card_reload">Updating data</string>
    <string name="time_reload">Each xx minutes</string>
    <string name="msj_reload">Updating to Ubidots</string>

    <string name="title_card_location">User location</string>
    <string name="check_location">Send location info</string>
    <string name="check_balance_location">Balance Power</string>
    <string name="check_accu_location">High Accuracy</string>
    <string name="check_low_location">Low Power</string>
    <string name="check_nop_location">Zero power</string>

    <string name="title_card_act">Activity</string>
    <string name="check_foot">Walking or running</string>
    <string name="check_bike">Bicycle</string>
    <string name="check_vehicle">Vehicle</string>

    <string name="act_vehicle">Vehicle</string>
    <string name="act_bicycle">Bicycle</string>
    <string name="act_foot">Foot</string>
    <string name="act_walking">Walking</string>
    <string name="act_running">Runing</string>
    <string name="act_still">Still</string>
    <string name="act_tilting">Tilting</string>
    <string name="act_unkown">You are a 7th dimension person!!!</string>
    <string name="act_undefined">You are a master of the universes</string>

    <string name="title_card_places">Places</string>
    <string name="check_places">Send place info</string>
    <string name="check_university">University</string>
    <string name="check_parking">Parking</string>
    <string name="check_supermarket">Supermarket</string>
    <string name="check_cafe_bar">Cafe &amp; Bar</string>
    <string name="check_restaurant">Restaurant</string>
    <string name="check_library">Main Library</string>
    <string name="check_tram">Tram stop</string>


    <string name="err_google_api_connect">Oh man! We cannot conect to Google APIs</string>
    <string name="title_activity_log">LogActivity</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="balance_prio_location">Change mode to PRIORITY_BALANCED_POWER_ACCURACY</string>
    <string name="accu_prio_location">Change mode to PRIORITY_HIGH_ACCURACY</string>
    <string name="low_prio_location">Change mode to PRIORITY_LOW_POWER</string>
    <string name="nop_prio_location">Change mode to PRIORITY_NO_POWER</string>
    <string name="err_google_api_suspended">Google API conection was suspended</string>
</resources>
