<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_location"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardElevation="2dp"
    android:layout_gravity="center"
    card_view:cardCornerRadius="2dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    android:layout_marginTop="4dp"
    android:padding="4dp"
    card_view:cardBackgroundColor="#283593">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_bullet_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/location"/>

        <TextView
            android:id="@+id/tv_title_location"
            android:text="@string/title_card_location"
            android:textColor="#FFF"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/iv_bullet_location"/>

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/check_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title_location"
            />

        <TextView
            android:id="@+id/tv_check_location"
            android:text="@string/check_location"
            android:textColor="#FFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title_location"
            android:layout_toRightOf="@+id/check_location"/>


        <TextView
            android:id="@+id/tv_title_mode_location"
            android:text="Mode"
            android:textSize="20sp"
            android:textColor="#FFF"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/check_location"/>

        <RadioGroup
            android:id="@+id/radio_mode_location"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/tv_title_mode_location">

            <RadioButton
                android:id="@+id/check_balance_location"
                android:text="@string/check_balance_location"
                android:textColor="#FFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <RadioButton
                android:id="@+id/check_accu_location"
                android:text="@string/check_accu_location"
                android:textColor="#FFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <RadioButton
                android:id="@+id/check_low_location"
                android:text="@string/check_low_location"
                android:textColor="#FFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <RadioButton
                android:id="@+id/check_nop_location"
                android:text="@string/check_nop_location"
                android:textColor="#FFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </RadioGroup>

    </RelativeLayout>

</android.support.v7.widget.CardView>