<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_time_weather"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardElevation="2dp"
    android:layout_gravity="center"
    card_view:cardCornerRadius="2dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    android:layout_marginTop="4dp"
    card_view:cardBackgroundColor="#F44336">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_weather"
            android:text="@string/wea_example"
            android:textColor="#FFF"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_temperature"
            android:text="@string/wea_example"
            android:textColor="#FFF"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/tv_weather" />


        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/check_time_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_weather"/>

        <TextView
            android:id="@+id/tv_check_time_weather"
            android:text="@string/check_time_weather"
            android:textColor="#FFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_weather"
            android:layout_toRightOf="@+id/check_time_weather"/>

        <SeekBar
            android:id="@+id/sb_time_weather_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/check_time_weather"/>

        <TextView
            android:id="@+id/sb_tv_time_weather_update"
            android:text="@string/time_reload"
            android:textColor="#FFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sb_time_weather_update"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>